[package]
name = "rusttest"
version = "0.1.0"
authors = ["stallboy <chengxiaosan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"

[lib]
proc_macro = true
name = "foo"           # The name of the target.
path = "src/lib.rs"